projects/nanousd-labs/nanousd/tests/usda/invalid/int_underflow.usda
#usda 1.0

def Scope "T"
{
    int tooSmall = -2147483649
}
